# gnome-shell-extension-wallpapers

./: .gitignore  AUTHORS  Makefile.in  README  aclocal.m4  autogen.sh  configure.ac
po/: Makefile.in  POTFILES
src/: Makefile.am  Makefile.in  extension.js  metadata.json  metadata.json.in  org.gnome.shell.extensions.wallpapers.gschema.xml.in  stylesheet.css
